syntax = "proto3";

package cheers.type;

option go_package = "github.com/salazarhugo/cheers1/genproto/cheers/type/party;party";

message Party {
  string id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string privacy = 5;
  string banner_url = 6;
  string start_date = 7;
  string end_date = 8;
  string host_id = 9;
  string longitude = 10;
  string latitude = 11;
  string location_name = 12;
}